# ia-com-python

./: PROMPT MESTRE DE DESENVOLVIMENTO E ASSISTÊNCIA.txt  README.md  main.py  poc_web_loader.py  pyproject.toml  requirements.txt
tests/: test_main.py
