# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# AQUI é onde você atualiza a versão, sincronizando com a tag do Git.
name = "chatbot_seu_blusa"
version = "1.4.0"
license = { text = "GPL-3.0-or-later" }
description = "Um chatbot com interface Flet e IA da Groq que pode analisar conteúdo da web."
authors = [
    { name = "Gleyson Atanazio", email = "gleysonasilva@gmail.com" }
]
readme = "README.md"
# CORREÇÃO: Versão do Python atualizada para ser compatível com as dependências.
requires-python = ">=3.9, <3.14" 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "flet",
    "flet-desktop",
    "langchain",
    "langchain-groq",
    "langchain-core",
    "langchain-community",
    "python-dotenv",
    "beautifulsoup4",
    "pytest",
    "pytube",
    "youtube-transcript-api",
    "pytubefix", # A versão é fixada para garantir a compatibilidade.
    "requests",
    "pypdf",
]

[tool.poetry]
package-mode = false

[project.urls]
Homepage = "https://github.com/atnzpe/ia-com-python"
"Bug Tracker" = "https://github.com/atnzpe/ia-com-python/issues"